[package]
name = "hooks"
version = "0.1.0"
edition = "2021"

authors = ["SunStorm"]
license = "AGPL-3.0-only"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.1"
webhook = "2.1.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12.0"
env_logger = "0.10.0"
dotenv = "0.15.0"
chrono = "0.4.31"
reqwest = "0.11.22"
sha1 = "0.10.6"
anyhow = "1.0.75"

[[bin]]
name = "hooks"
test = false
bench = false
